Fix some weird spacing in the docs

--- a/mla-example.tex
+++ b/mla-example.tex
@@ -2,7 +2,7 @@
 
 \title{Sample MLA Document}
 \author{John Doe}
-\professor{Dr. Suzie Que}
+\professor{Dr.\ Suzie Que}
 \course{\LaTeX\ 101}
 \date{\mladate} % see docs for `\mladate'
 
@@ -26,7 +26,7 @@ Though this paper is short, section headings are employed
 as an example of the ``mla'' class' capabilities.
 
 Some professors may explicitly require or denounce use of headings.
-Dr. Suzie Que of Anytown, PA requires they be used for anything
+Dr.\ Suzie Que of Anytown, PA requires they be used for anything
 longer than five pages:
 \begin{blockquote}
 John---so help me God---if you turn in another twenty-page research
@@ -90,7 +90,7 @@ Endnotes can be easily printed in correct format by calling
 
 \section{Using bibliographies}
 
-Dr. Suzie Que was cited in the above blockquote.
+Dr.\ Suzie Que was cited in the above blockquote.
 The ins-and-outs of ``biblatex'' will not be explained in this
 document, so please refer to online documentation such as the
 ``BibLaTeX Cheat Sheet''.
