--- a/mla.dtx
+++ b/mla.dtx
@@ -610,7 +610,7 @@
 %
 % \begin{macro}{\professor}
 % The instructor who assigned the paper, i.e.
-% \mentioned{Dr. Marjorie Stewart}.
+% \mentioned{Dr.\ Marjorie Stewart}.
 %
 %    \begin{macrocode}
 \newcommand*{\professor}[1]{\gdef\@professor{#1}}
@@ -807,7 +807,7 @@
 %
 % Thanks to a bug inherited from the \Dpkg{here} package
 % which has remained unfixed since 1987\footnote{See the \cs{par}
-% on p. 11, line 249 of \Dfile{ltfloat.dtx} from the \LaTeX\ kernel.},
+% on p.\ 11, line 249 of \Dfile{ltfloat.dtx} from the \LaTeX\ kernel.},
 % there is not only extra space after the figure but the inability to
 % insert a figure within a paragraph.
 % Miraculously, there is a fix for this\footnote{See David Carlisle's
