Tweak a few more things in the docs file & repo
* Change e-Mail to something I have access to
* Use actual `semantic-markup` package
* Remove obsolete `filecontents` dependency (from docs)
* Update `.gitignore` for `.acr` file

--- a/mla.dtx
+++ b/mla.dtx
@@ -47,7 +47,6 @@
 \usepackage{verbatim}
 
 %% A couple things are cited in the docs
-\usepackage{filecontents}
 \begin{filecontents}{mla.bib}
 @book{mlahb,
 	author = {{Modern Language Association of America}},
@@ -92,12 +91,7 @@
 \DeclareAcronym{SE}{short=SE,long=Stack Exchange}
 
 %% For a few different things
-%%\usepackage{semantic-markup}
-\usepackage{csquotes}
-\newcommand{\foreign}[1]{\textit{#1}}
-\newcommand{\term}[1]{\textit{#1}}
-\newcommand{\soCalled}[1]{\textquote{#1}}
-\newcommand{\mentioned}[1]{\textquote{#1}}
+\usepackage{semantic-markup}
 
 %% Reset footnotes per page
 \usepackage[perpage]{footmisc}
@@ -106,7 +100,7 @@
 \interfootnotelinepenalty=10000
 
 %% Technical info
-\def\myemail{ssterling@firemail.cc}
+\def\myemail{sprice623@aol.com}
 
 %% For the sake of consistency, I guess
 \GlossaryPrologue{\section{Change history}}
