--- a/mla.dtx
+++ b/mla.dtx
@@ -27,7 +27,7 @@
 %<mla>\NeedsTeXFormat{LaTeX2e}
 %<mla>\ProvidesClass{mla}
 %<*mla>
-    [2020/08/20 v0.9 MLA Paper Class]
+    [2020/10/05 v0.9 MLA Paper Class]
 %</mla>
 
 %<*driver>
@@ -131,7 +131,7 @@
 %
 % \fi
 %
-% \CheckSum{325}
+% \CheckSum{374}
 %
 % \CharacterTable
 %  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
@@ -237,6 +237,8 @@
 % \begin{macro}{\MLA@figures}
 % \begin{macro}{\MLA@notes}
 % \begin{macro}{\MLA@microtype}
+% \begin{macro}{\MLA@paperheader}
+% \begin{macro}{\MLA@pageheader}
 % The following are true/false switches to toggle certain features.
 %
 %    \begin{macrocode}
@@ -246,7 +248,11 @@
 \newif\ifMLA@figures
 \newif\ifMLA@notes
 \newif\ifMLA@microtype
+\newif\ifMLA@paperheader
+\newif\ifMLA@pageheader
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
@@ -301,6 +307,22 @@
 % the Times typeface.
 %    \begin{macrocode}
 \DeclareOption{microtype}{\MLA@microtypetrue}
+%    \end{macrocode}
+%
+% \changes{v0.9}{2020/10/05}{Added \Dopt{nopaperheader},
+%	\Dopt{nopageheader} and \Dopt{noheaders} options to enable
+%	omission of paper headers, page headers or both paper
+%	and page headers respectively}
+% For rare cases in which the paper and page headers are omitted
+% or must be custom, the options \Dopt{nopaperheader} and
+% \Dopt{nopageheader} may be used respectively, or
+% \Dopt{noheaders} to omit both.
+%    \begin{macrocode}
+\MLA@paperheadertrue
+\MLA@pageheadertrue
+\DeclareOption{nopaperheader}{\MLA@paperheaderfalse}
+\DeclareOption{nopageheader}{\MLA@pageheaderfalse}
+\DeclareOption{noheaders}{\MLA@paperheaderfalse\MLA@pageheaderfalse}
 %    \end{macrocode}
 %
 % \subsection{Processing}
@@ -558,7 +580,9 @@
 % \label{sec:running_head}
 %
 % The running head in \ac{MLA} style is simply the author's surname
-% followed by the current page number, right-aligned.
+% (if defined) followed by the current page number, right-aligned,
+% unless specified otherwise using the \Dopt{nopageheader} option
+% (see section~\ref{sec:options}).
 % This is managed using the \Dpkg{fancyhdr} and \Dpkg{xstring} packages.
 %
 %    \begin{macrocode}
@@ -569,7 +593,13 @@
 \fancyhf{}
 \pagestyle{headings}
 \pagestyle{norule}
-\fancyhead[RO]{{\StrBehind{\@author}{ }[\last]\last} \thepage}
+\ifMLA@pageheader
+    \ifx\@author\@empty
+        \fancyhead[RO]{\thepage}
+    \else
+        \fancyhead[RO]{{\StrBehind{\@author}{ }[\last]\last} \thepage}
+    \fi
+\fi
 %    \end{macrocode}
 %
 % The following code is largely a hack to align the header
@@ -640,14 +670,16 @@
 %	\term{day month year}}
 % \changes{v0.4.1}{2019/05/15}{Changed date format back to whatever
 %	is inside \cs{@date}}
+% \changes{v0.9}{2020/10/05}{Changed to ignore (not print) undefined
+%	header macros}
 %    \begin{macrocode}
 \newcommand{\makemlaheader}{%
     \begin{noindent}
-        \@author \\
-        \@professor \\
-        \@course \\
-        \@date \\
-        \begin{center}\@title\end{center}
+	\ifx\@author\@empty\else\@author\\\fi
+	\ifx\@professor\@empty\else\@professor\\\fi
+	\ifx\@course\@empty\else\@course\\\fi
+	\ifx\@date\@empty\else\@date\\\fi
+        \ifx\@title\@empty\else\begin{center}\@title\end{center}\fi
     \end{noindent}
 }
 %    \end{macrocode}
@@ -660,12 +692,16 @@
 \renewcommand{\maketitle}{\makemlaheader}
 %    \end{macrocode}
 %
-% Finally, the header will print at the beginning of every document.
+% Finally, the header will print at the beginning of every document
+% unless specified otherwise using the \Dopt{nopaperheader} option
+% (see section~\ref{sec:options}).
 %
 % \changes{v0.5}{2019/05/18}{Moved header-printing process to
 %	\cs{AtBeginDocument}}
 %    \begin{macrocode}
-\AtBeginDocument{\maketitle}
+\ifMLA@paperheader
+    \AtBeginDocument{\maketitle}
+\fi
 %    \end{macrocode}
 %
 % \subsection{Sectioning}
