Add note about custom section headings
Kind-of solves #8.

--- a/mla.dtx
+++ b/mla.dtx
@@ -768,6 +768,8 @@
 % will be set in small-caps by default.
 % Plain, unnumbered and entirely unformatted section headings can
 % be acheived using the \Dopt{plainheadings} option.
+% For custom headings other than these, refer to the
+% \Dpkg{fancyhdr} package documentation.
 %
 %    \begin{macrocode}
 \renewcommand{\thesection}{\@arabic\c@section}
