Add section references to *all* options in docs

--- a/mla.dtx
+++ b/mla.dtx
@@ -556,7 +556,7 @@
 % \ac{MLA} itself: \url{https://style.mla.org/orphaned-words/}}.
 % For the odd case in which papers must be consistently 24 lines
 % (i.\,e.\ explicitly allowing orphans and widows), the
-% \Dopt{fullpage} option may be used.
+% \Dopt{fullpage} option may be used (see section~\ref{sec:options}).
 %
 %    \begin{macrocode}
 \ifMLA@fullpage
@@ -767,7 +767,8 @@
 % However, for the sake of clarity, the section headings in this class
 % will be set in small-caps by default.
 % Plain, unnumbered and entirely unformatted section headings can
-% be acheived using the \Dopt{plainheadings} option.
+% be acheived using the \Dopt{plainheadings} option
+% (see section~\ref{sec:options}).
 % For custom headings other than these, refer to the
 % \Dpkg{fancyhdr} package documentation.
 %
