Fix showmedium errors and make mla7 bib work.
With the biblatex-mla package, showmedium can only be set when using mla7. It
defaults to true. So the solution to all the errors is to actually enable mla7
when passed the mla7 class option and not try to change showmedium when passed
the mla8 and mla8alt options.

--- a/mla.dtx
+++ b/mla.dtx
@@ -418,16 +418,16 @@
 %
 %    \begin{macrocode}
 \ifMLA@seven
-    \RequirePackage[style=mla,noremoteinfo=false,showmedium=true,
+    \RequirePackage[style=mla7,noremoteinfo=false,
                     backend=biber]{biblatex}
 \fi
 \ifMLA@eight
     \RequirePackage[style=mla-new,noremoteinfo=false,
-                    showmedium=false,backend=biber]{biblatex}
+                    backend=biber]{biblatex}
 \fi
 \ifMLA@eightalt
     \RequirePackage[style=mla,noremoteinfo=false,
-                    showmedium=false,backend=biber]{biblatex}
+                    backend=biber]{biblatex}
 \fi
 %    \end{macrocode}
 %
