--- a/mla.dtx
+++ b/mla.dtx
@@ -27,7 +27,7 @@
 %<mla>\NeedsTeXFormat{LaTeX2e}
 %<mla>\ProvidesClass{mla}
 %<*mla>
-    [2020/11/07 v0.9 MLA Paper Class]
+    [2021/09/14 v1.0 MLA Paper Class]
 %</mla>
 
 %<*driver>
@@ -416,6 +416,8 @@
 % The \Dcls{mla} class options dictate what options are passed to
 % \Dpkg{biblatex}, hence the \term{if-then} clauses.
 %
+% \changes{v1.0}{2021/09/14}{Fixed bug which caused class to fail
+%	with \ac{MLA} 8 citations}
 %    \begin{macrocode}
 \ifMLA@seven
     \RequirePackage[style=mla7,noremoteinfo=false,
