Fix errors in DTX which prevented compilation
Missing `\end{macro}` and incorrect checksum

--- a/mla.dtx
+++ b/mla.dtx
@@ -138,7 +138,7 @@
 %
 % \fi
 %
-% \CheckSum{401}
+% \CheckSum{406}
 %
 % \CharacterTable
 %  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
@@ -263,6 +263,7 @@
 \newif\ifMLA@plainheadings
 \newif\ifMLA@fullpage
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
